--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <!-- Replace assets/person.jpg with the person's photo -->
           <img id="personPhoto" src="image.jpg" alt="Birthday Person">
         </div>
-        <h1 id="wishHeading">🎉 Happy Birthday, <span id="personName">zain</span>! 🎉</h1>
+        <h1 id="wishHeading">🎉 Happy Birthday, <span id="personName">zain shah</span>! 🎉</h1>
         <p class="subtitle">Wishing you a day full of love and sweet surprises.</p>
 
         <div class="actions">
