--- a/message.html
+++ b/message.html
@@ -17,7 +17,7 @@
 
   <main class="container">
     <h2 class="page-title">Leave a Message</h2>
-    <p class="muted">This is a static template. If you want visitors to save messages online, I can add a simple form with Netlify Forms or a tiny backend later.</p>
+    <p class="muted">How did you feel after seeing this birthday wish surprise? Write a message with your name and send it.</p>
 
     <div class="message-card">
       <label for="name">Your name</label>
