--- a/message.html
+++ b/message.html
@@ -1,39 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Messages — HappyDay</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Messages for Zain</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-soft">
-  <header class="nav">
-    <a class="logo" href="index.html">HappyDay</a>
-    <nav>
-      <a href="gallery.html">Gallery</a>
-      <a href="message.html">Messages</a>
-    </nav>
-  </header>
+<body>
+  <div class="container message-page">
+    <h1 class="title">Leave a Message for Zain</h1>
+    <p class="subtitle">Write your name and a short wish — it will be saved locally.</p>
 
-  <main class="container">
-    <h2 class="page-title">Leave a Message</h2>
-    <p class="muted">How did you feel after seeing this birthday wish surprise? Write a message with your name and send it.</p>
-
-    <div class="message-card">
-      <label for="name">Your name</label>
-      <input id="name" placeholder="Your name">
-      <label for="msg">Message</label>
-      <textarea id="msg" rows="4" placeholder="Write a short wish..."></textarea>
-      <button id="showMsg" class="btn">Preview Message</button>
-
-      <div id="preview" class="preview hidden">
-        <h3>Preview</h3>
-        <p id="previewText"></p>
+    <form id="wishForm" class="wish-form" onsubmit="saveMessage(event)">
+      <input type="text" id="visitorName" placeholder="Your name" required />
+      <textarea id="visitorMsg" placeholder="Your message for Zain..." rows="4" required></textarea>
+      <div class="form-actions">
+        <button type="submit">Send Wish</button>
+        <button type="button" onclick="clearMessages()">Clear All</button>
       </div>
-    </div>
-  </main>
+    </form>
 
-  <footer class="footer">Back to <a href="index.html">Home</a></footer>
+    <h2>Messages</h2>
+    <div id="messagesList" class="messages-list"></div>
+
+    <div class="nav-row">
+      <button onclick="window.location.href='index.html'">← Home</button>
+      <button onclick="window.location.href='surprise.html'">Open Surprise →</button>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
