--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <audio id="birthdaySong" src="assets/song.mp3" preload="auto"></audio>
+  <audio id="birthdaySong" src="happy-birthday-254480.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
 </body>
