--- a/surprise.html
+++ b/surprise.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="card">
-      <img src="assets/placeholder.jpg" alt="Zain's Photo" class="photo" />
+      <img src="image.jpg" alt="Zain's Photo" class="photo" />
       <h3 class="big-msg">Happy Birthday, Zain!</h3>
       <p class="sub-msg">May your year ahead be filled with adventure and joy.</p>
       <div class="buttons">
